fixed list non centered on mobile

--- a/src/includes/scss/_jumbotron-home.scss
+++ b/src/includes/scss/_jumbotron-home.scss
@@ -149,7 +149,6 @@
 
     @media (max-width:700px) {
       width: auto;
-      align-items: flex-start;
       padding:30px;
 
       ul,ol {
